# Eric_Qwen_Edit_Experiments

./: .gitignore  CONDITIONING_SYSTEM.md  DEV_NOTES.md  LICENSE.txt  README.md  __init__.py  api_keys.ini.example  pyproject.toml  requirements.txt
nodes/: __init__.py  eric_gen_searcher_node.py  eric_qwen_conditioned_edit.py  eric_qwen_conditioning_encode.py  eric_qwen_conditioning_ops.py  eric_qwen_controlnet_prompt_rewriter.py  eric_qwen_direction_inspect.py  eric_qwen_direction_ops.py  eric_qwen_edit_component_loader.py  eric_qwen_edit_delta.py  eric_qwen_edit_inpaint.py  eric_qwen_edit_inpaint_transfer.py  eric_qwen_edit_loader.py  eric_qwen_edit_lora.py  eric_qwen_edit_multi_image.py  eric_qwen_edit_node.py  eric_qwen_edit_spectrum.py  eric_qwen_edit_style_transfer.py  eric_qwen_edit_unify.py  eric_qwen_edit_utils.py  eric_qwen_grounded_generate.py  eric_qwen_image_component_loader.py  eric_qwen_image_controlnet_loader.py  eric_qwen_image_generate.py  eric_qwen_image_harmonize.py  eric_qwen_image_loader.py  eric_qwen_image_lora.py  eric_qwen_image_multistage.py  eric_qwen_image_spectrum.py  eric_qwen_image_ultragen.py  eric_qwen_image_ultragen_cn.py  eric_qwen_image_ultragen_inpaint_cn.py  eric_qwen_inpaint_prompt_rewriter.py  eric_qwen_prompt_rewriter.py  eric_qwen_reference_describer.py  eric_qwen_upscale_vae.py
pipelines/: __init__.py  pipeline_output.py  pipeline_qwen_edit.py  spectrum_forward.py  spectrum_utils.py
training/: train_style_lora.py
training/configs/: silvermax.yaml
